@@ -1185,6 +1185,7 @@ class PMCatalogNavigationTabs(CatalogNavigationTabs):
         tool = api.portal.get_tool('portal_plonemeeting')
         grouped_configs = tool.getGroupedConfigs()
         portal_url = api.portal.get().absolute_url()
+        mc_tabs = []
         for config_group, configs in grouped_configs.items():
             # a tab with direct access to config
             if not config_group[0]:
@@ -1196,7 +1197,7 @@ class PMCatalogNavigationTabs(CatalogNavigationTabs):
                             'id': 'mc_{0}'.format(cfg.getId()),
                             'url': tool.getPloneMeetingFolder(cfgId).absolute_url() + "/searches_items",
                             'description': ''}
-                        tabs.append(data)
+                        mc_tabs.append(data)
             # a tab with access to the config_group, only display it if :
             # - it contains configs;
             # - at least showPloneMeetingTab one of the configs
@@ -1210,6 +1211,8 @@ class PMCatalogNavigationTabs(CatalogNavigationTabs):
                             'url': portal_url + '/#',
                             'description': '',
                             'data-config_group': config_group[0]}
-                        tabs.append(data)
+                        mc_tabs.append(data)
                         break
+        # insert MC related tabs after first tab (index_html) but before other extra tabs
+        tabs = [tabs[0]] + mc_tabs + tabs[1:]
         return tabs
